--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -1,24 +1,4 @@
 <main>
-
-  <html lang="pt-BR">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Cadastro de Cliente</title>
-      <style>
-        body { font-family: Arial, sans-serif; display: flex; justify-content:
-        center; align-items: center; height: 100vh; margin: 0; background-color:
-        #f5f5f5; } .container { width: 100%; max-width: 400px; padding: 20px;
-        background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 8px; } h2 { text-align: center; color: #333; } label {
-        font-weight: bold; margin-top: 10px; display: block; } input, select {
-        width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border:
-        1px solid #ddd; border-radius: 4px; } button { width: 100%; padding:
-        10px; background-color: #4caf50; color: white; border: none;
-        border-radius: 4px; font-size: 16px; cursor: pointer; } button:hover {
-        background-color: #45a049; }
-      </style>
-    </head>
     <body>
       <div class="container">
         <h2>Cadastro de Cliente</h2>
@@ -51,6 +31,7 @@
         </form>
       </div>
 
+        <button ><a href="/views/teste.handlebars">click</a></button>
       <script>
         function atualizarCampoDocumento() { const tipoCliente =
         document.getElementById("tipoCliente").value; const labelDocumento =
@@ -66,7 +47,9 @@
         labelDocumento.textContent = "CPF ou CNPJ:"; campoDocumento.placeholder
         = ""; campoDocumento.removeAttribute("pattern"); } }
       </script>
+
     </body>
+
   </html>
 
 </main>
