--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,12 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Cadastro de Cliente</title>
-      <link rel="stylesheet" type="text/css" href="/style/style.css">
+      
+      <title>{{{title}}}</title>
+      <link rel="stylesheet" type="text/css" href="/style/style.css"/>
+      
   <body>
     {{{body}}}
+    <script src="script/script.js"></script>
   </body>
 </html>
